Final attempt at fixing iframe behaviour on iOS!

--- a/app/pages/terms/terms.less
+++ b/app/pages/terms/terms.less
@@ -66,7 +66,8 @@
 }
 
 .iframe-holder {
-  -webkit-overflow-scrolling: touch;
+  overflow: scroll-y !important; 
+  -webkit-overflow-scrolling: touch !important;
 }
 
 .terms-iframe-terms {
